# heavy-wait

./: README.md  llmchalleng.md  llmchalleng4.md  pyproject.toml
heavywait/: cli.py  heavywait.py  prompts.py
tests/: context.py  test_labels.py
tests/resources/dst/: efficient-transformers.md
tests/resources/src/: efficient-transformers.md
