[tool.poetry]
name = "heavywait"
version = "0.1.1"
authors = ["MechRegard <dave.lange@gmail.com>"]
description = "Add some weight behind the markdown"
homepage = "https://github.com/mechregard/heavy-wait"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
include = ["LICENSE",]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.192"
openai = "*"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hw = "heavywait.cli:cli"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple"
